--- a/Atividade layout/index.html
+++ b/Atividade layout/index.html
@@ -18,8 +18,10 @@
     </nav>
     <div class="quadrado">
         <span>
-            <h1>Fica Parecido</h1>
-            <h2>com o exemplo em nome de Deus</h2>
+            <h4>=============</h4>
+            <h2>products</h1>
+            <h5>=============</h4>
+            <h3>Lorem ipsum dolor sit amet.</h2>
         </span>
         <section id="artigos">
             <article>
@@ -27,24 +29,24 @@
                 <h1>Brasil derrotado pelo México na Copa América</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui dolore dolorem, labore iure fuga voluptas corporis assumenda velit consequatur distinctio?
                 </p>
-                <a href="#">Continue lendo...</a>
+                <a class="txt" href="#">Continue lendo...</a>
             </article>
             <article>
                 <div class="imagem"></div>            
                 <h1>Sony anuncia PS5 Pro</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda veritatis necessitatibus quasi beatae explicabo, vel cumque eligendi culpa esse adipisci.</p>
-                <a href="#">Continue lendo...</a>
+                <a class="txt" href="#">Continue lendo...</a>
             </article>
             <article>
-                <div class="imagem"></div>
+                <div class="imagem2"></div>
                 <h1>O café acabou (O que será de nós)</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic quam adipisci molestiae, quibusdam optio unde  commodi rem corporis soluta ab!</p>
-                <a href="#">Continue lendo...</a>
+                <a class="txt" href="#">Continue lendo...</a>
             </article>
         </section>
     </div>
     <footer>
-        <p>Lorem ipsum dolor sit amet.</p>
+        <span>Lorem ipsum dolor sit amet.</span>
     </footer>
 </body>
 </html>
